hphp/hack/test/extended_reasons/assign_vector_bad.php.diff.exp
--- control

+++ test

@@ -13,7 +13,6 @@

 error: Typing[4110] Invalid return type [1]
 -> Expected string [2]
 -> But got arraykey [3]
--> This type argument to Vector must match exactly (it is invariant) [3]
 
 hphp/hack/test/extended_reasons/assign_vector_bad.php:5:10
       1 | <?hh