hphp/hack/test/extended_reasons/assign_vector_bad.php
<?hh

function test(Vector<string> $v): Vector<arraykey> {
  $v[0] = 42;
  return $v;
}
